# ROS_UNav-Sim

airsim_ros_pkgs/: CMakeLists.txt
airsim_ros_pkgs/include/: airsim_ros_wrapper.h  airsim_settings_parser.h  pd_position_controller_simple.h
airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
bluerov2_nmpc/: CMakeLists.txt  package.xml
bluerov2_nmpc/include/: nmpc_bluerov2_2D.h  nmpc_bluerov2_2D_main.h
bluerov2_nmpc/launch/: bluerov2_nmpc.launch
bluerov2_nmpc/launch/airframes/: bluerov2_2D _backup.xml  bluerov2_2D.xml
bluerov2_nmpc/scripts/: thrust_allocator.py
bluerov2_nmpc/solver/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
bluerov2_nmpc/src/: nmpc_bluerov2_2D.cpp  nmpc_bluerov2_2D_main.cpp
bluerov2_trajectory/: CMakeLists.txt  package (copy).xml  package.xml
bluerov2_trajectory/cfg/: set_recdata.cfg  set_trajectory.cfg  set_wind_generation.cfg
bluerov2_trajectory/include/: recdata.h  trajectory.h
bluerov2_trajectory/launch/: bluerov2_trajectory.launch  windgen_recdata.launch
bluerov2_trajectory/scripts/: setup.py
bluerov2_trajectory/scripts/bluerov2_pipe_following/bluerov_mpc/: mpc_bluerov2.py  video_ray_ccode_simple.cpp  video_ray_latest_ccode.cpp
bluerov2_trajectory/scripts/bluerov2_pipe_following/bluerov_mpc/ACADOtoolkit/examples/code_generation/mpc_mhe/: CMakeLists.txt  drone.cpp
bluerov2_trajectory/scripts/bluerov2_pipe_following/bluerov_mpc/airsim/: client.py  types.py
bluerov2_trajectory/scripts/bluerov2_pipe_following/bluerov_mpc/ccode/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  setup.py
bluerov2_trajectory/scripts/bluerov2_pipe_following/bluerov_mpc/ccode_old/: acado_common.h  acado_integrator.c  acado_solver.c
bluerov2_trajectory/scripts/bluerov2_pipe_following/env/: image_test.py  pipe_env.py  pipe_env_api.py
bluerov2_trajectory/scripts/bluerov2_pipe_following/train/: expert_follower.py  plot_reward.py  run_trained.py  train.py
bluerov2_trajectory/scripts/bluerov2_pipe_following/utils/: plot_utils.py
bluerov2_trajectory/src/: recdata.cpp  trajectory.cpp  wind_generation.cpp
